homework/homework_3.tf

# # VPC
# resource "aws_vpc" "main_vpc" {
#   cidr_block       = "10.0.0.0/16"
#   instance_tenancy = "default"

#   tags = {
#     Name = "main-vpc"
#   }
# }

# # Public Subnets
# resource "aws_subnet" "public1" {
#   vpc_id                  = aws_vpc.main_vpc.id
#   cidr_block              = "10.0.1.0/24"
#   availability_zone       = "us-east-1a"
#   map_public_ip_on_launch = true
#   tags = { Name = "public-1a" }
# }

# resource "aws_subnet" "public2" {
#   vpc_id                  = aws_vpc.main_vpc.id
#   cidr_block              = "10.0.2.0/24"
#   availability_zone       = "us-east-1b"
#   map_public_ip_on_launch = true
#   tags = { Name = "public-1b" }
# }

# resource "aws_subnet" "public3" {
#   vpc_id                  = aws_vpc.main_vpc.id
#   cidr_block              = "10.0.3.0/24"
#   availability_zone       = "us-east-1c"
#   map_public_ip_on_launch = true
#   tags = { Name = "public-1c" }
# }

# # Private Subnets
# resource "aws_subnet" "private1" {
#   vpc_id            = aws_vpc.main_vpc.id
#   cidr_block        = "10.0.4.0/24"
#   availability_zone = "us-east-1a"
#   tags = { Name = "private-1a" }
# }

# resource "aws_subnet" "private2" {
#   vpc_id            = aws_vpc.main_vpc.id
#   cidr_block        = "10.0.5.0/24"
#   availability_zone = "us-east-1b"
#   tags = { Name = "private-1b" }
# }

# resource "aws_subnet" "private3" {
#   vpc_id            = aws_vpc.main_vpc.id
#   cidr_block        = "10.0.6.0/24"
#   availability_zone = "us-east-1c"
#   tags = { Name = "private-1c" }
# }

# # Internet Gateway
# resource "aws_internet_gateway" "internet_gw" {
#   vpc_id = aws_vpc.main_vpc.id

#   tags = {
#     Name = "main-igw"
#   }
# }

# # Elastic IP for NAT Gateway
# resource "aws_eip" "nat_eip" {
#   domain = "vpc"
# }

# # NAT Gateway in public subnet
# resource "aws_nat_gateway" "nat_gw" {
#   allocation_id = aws_eip.nat_eip.id
#   subnet_id     = aws_subnet.public1.id

#   tags = {
#     Name = "gw-NAT"
#   }

# # we need depends_on because Internet gateway will created before NAT gateway
#   depends_on = [aws_internet_gateway.internet_gw]
# }

# # Public Route Table
# resource "aws_route_table" "public_rtb" {
#   vpc_id = aws_vpc.main_vpc.id

#   route {
#     cidr_block = "0.0.0.0/0"
#     gateway_id = aws_internet_gateway.internet_gw.id
#   }

#   tags = {
#     Name = "public-rtb"
#   }
# }

# # Private Route Table
# resource "aws_route_table" "private_rtb" {
#   vpc_id = aws_vpc.main_vpc.id

#   route {
#     cidr_block     = "0.0.0.0/0"
#     nat_gateway_id = aws_nat_gateway.nat_gw.id
#   }

#   tags = {
#     Name = "private-rtb"
#   }
# }

# # Route Table Associations
# resource "aws_route_table_association" "public1_assoc" {
#   subnet_id      = aws_subnet.public1.id
#   route_table_id = aws_route_table.public_rtb.id
# }

# resource "aws_route_table_association" "public2_assoc" {
#   subnet_id      = aws_subnet.public2.id
#   route_table_id = aws_route_table.public_rtb.id
# }

# resource "aws_route_table_association" "public3_assoc" {
#   subnet_id      = aws_subnet.public3.id
#   route_table_id = aws_route_table.public_rtb.id
# }

# resource "aws_route_table_association" "private1_assoc" {
#   subnet_id      = aws_subnet.private1.id
#   route_table_id = aws_route_table.private_rtb.id
# }

# resource "aws_route_table_association" "private2_assoc" {
#   subnet_id      = aws_subnet.private2.id
#   route_table_id = aws_route_table.private_rtb.id
# }

# resource "aws_route_table_association" "private3_assoc" {
#   subnet_id      = aws_subnet.private3.id
#   route_table_id = aws_route_table.private_rtb.id
# }

# # Security Group
# resource "aws_security_group" "sg_ec2" {
#   name        = "homework-sg"
#   description = "Allow SSH and HTTP"
#   vpc_id      = aws_vpc.main_vpc.id

#   ingress {
#     from_port   = 80
#     to_port     = 80
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   ingress {
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = {
#     Name = "homework-sg"
#   }
# }

# # EC2 Instance
# resource "aws_instance" "first_ec2" {
#   ami                         = "ami-0f88e80871fd81e91"
#   instance_type               = "t2.micro"
#   subnet_id                   = aws_subnet.public1.id
#   vpc_security_group_ids      = [aws_security_group.sg_ec2.id]
#   associate_public_ip_address = true
#   key_name                    = "myLaptopKey" 

#   tags = {
#     Name        = "my_instance"
#     Environment = "dev"
#   }
# }
